--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -23,4 +23,5 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+    <p><a href="{{ url_for('register') }}">Зарегистрироваться</a></p>
 {% endblock %}
